--- a/style.css
+++ b/style.css
@@ -97,15 +97,11 @@
     font-weight: 500;
 }
 
-/* about section style */
+/* all similar content code styles */
 section{
     padding: 100px 0;
 }
-.about{
-    font-family: 'Poppins', sans-serif;
-    background: #ddd;
-}
-.about .title{
+section .title{
     position: relative;
     text-align: center;
     font-size: 40px;
@@ -114,7 +110,7 @@ section{
     margin-bottom: 60px;
     padding-bottom: 20px;
 }
-.about .title::before{
+section .title::before{
     content: "";
     position: absolute;
     bottom: 0px;
@@ -124,18 +120,27 @@ section{
     background: #111;
     transform: translateX(-50%);
 }
-.about .title::after{
-    content: "who I am";
+section .title::after{
     position: absolute;
     bottom: -12px;
     font-size: 20px;
     color: crimson;
     left: 50%;
     padding: 5px;
-    background: #ddd;
     transform: translateX(-50%);
 }
-.about .about-content{
+
+/* about section style */
+.about{
+    font-family: 'Poppins', sans-serif;
+    background: #ddd;
+}
+.about .title::after{
+    content: "who I am";
+    background: #ddd;
+}
+.about .about-content, 
+.services .serv-content{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -179,6 +184,59 @@ section{
 .about .about-content .right a:hover{
     color: crimson;
     background: none;
+}
+
+/* services section style */
+.services{
+    color: #fff;
+    background: #111;
+    font-family: 'Poppins', sans-serif;
+}
+.services .title::before{
+    background: #fff;
+}
+.services .title::after{
+    background: #111;
+    content: "what i provide";
+}
+.services .serv-content .card{
+    width: calc(33% - 20px);
+    background: #222;
+    text-align: center;
+    border-radius: 6px;
+    padding: 35px 25px;
+    cursor: pointer;
+    transition: all 0.5s ease;
+}
+.services .serv-content .card:hover{
+    background: crimson;
+}
+.services .serv-content .card .box{
+    transition: all 0.5s ease;
+}
+.services .serv-content .card:hover .box{
+    transform: scale(1.05);
+}
+.services .serv-content .card i{
+    font-size: 50px;
+    color: crimson;
+    transition: color 0.5s ease;
+}
+.services .serv-content .card:hover i{
+    color: #fff;
+}
+.services .serv-content .card .text{
+    font-size: 27px;
+    font-weight: 500;
+    color: #fff;
+    margin: 10px 0 7px 0;
+    font-family: 'Poppins', sans-serif;
+}
+.services .serv-content .card p{
+    font-size: 18px;
+    font-weight: 400;
+    color: #fff;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 /* responsive media query start */
@@ -248,6 +306,10 @@ section{
     .about .about-content .right{
         flex: 100%;
     }
+    .services .serv-content .card{
+        width: calc(50% - 10px);
+        margin-bottom: 20px;
+    }
 }
 @media (max-width: 690px){
     .max-width{
@@ -258,6 +320,9 @@ section{
     }
     .home .home-content .text-3{
         font-size: 25px;
+    }
+    .services .serv-content .card{
+        width: 100%;
     }
 }
 @media (max-width: 500px){
