an animation, a scroll up btn and e footer

--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
     box-sizing: border-box;
     text-decoration: none;
 }
+html{
+    scroll-behavior: smooth;
+}
 .max-width{
     max-width: 1300px;
     padding: 0 80px;
@@ -64,6 +67,33 @@
     cursor: pointer;
     display: none;
 }
+.scroll-up-btn{
+    position: fixed;
+    height: 45px;
+    width: 42px;
+    background: crimson;
+    right: 30px;
+    bottom: 10px;
+    text-align: center;
+    line-height: 45px;
+    color: #fff;
+    z-index: 9999;
+    font-size: 30px;
+    border-radius: 6px;
+    border-bottom-width: 2px;
+    cursor: pointer;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.5s ease;
+}
+.scroll-up-btn.show{
+    bottom: 30px;
+    opacity: 1;
+    pointer-events: auto;
+}
+.scroll-up-btn:hover{
+    filter: brightness(90%);
+}
 
 /* home section style */
 
@@ -101,7 +131,7 @@
 section{
     padding: 100px 0;
 }
-.about, .skills, .projects, .contact{
+.about, .skills, .projects, .contact, footer{
     font-family: 'Poppins', sans-serif;
     background: #ddd;
 }
@@ -405,6 +435,20 @@ section .title::after{
     height: 260px;
     object-fit: cover;
     border-radius: 10px;
+}
+
+/* footer section style */ 
+footer{
+    background: #111;
+    padding: 20px 23px;
+    color: #fff;
+}
+footer span a{
+    color: crimson;
+    text-decoration: none;
+}
+footer span a:hover{
+    text-decoration: underline;
 }
 
 /* responsive media query start */
