--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ html{
 }
 .navbar.sticky{
     padding: 15px 0;
-    background: crimson; 
+    background: #A020F0; 
 }
 .navbar .max-width{
     display: flex;
@@ -37,7 +37,7 @@ html{
     font-weight: 600;
 }
 .navbar .logo a span{
-    color: crimson;
+    color: #A020F0;
     transition: all 0.5s ease;
 }
 .navbar.sticky .logo a span{
@@ -56,7 +56,7 @@ html{
     transition: color 0.5s ease;
 }
 .navbar .menu li a:hover{
-    color: crimson;
+    color: #A020F0;
 }
 .navbar.sticky .menu li a:hover{
     color: #fff;
@@ -72,7 +72,7 @@ html{
     position: fixed;
     height: 45px;
     width: 42px;
-    background: crimson;
+    background: #A020F0;
     right: 30px;
     bottom: 10px;
     text-align: center;
@@ -100,7 +100,7 @@ html{
 
 .home{
     display: flex;
-    background-image: linear-gradient(to right, #0f0c29, #302b63, #24243e);
+    background-image: linear-gradient(to right, #000046, #1CB5E0);
     height: 100vh;
     background-size: cover;
     background-attachment: fixed;
@@ -124,7 +124,7 @@ html{
     margin: 5px 0;
 }
 .home .home-content .text-3 span{
-    color: crimson;
+    color: #A020F0;
     font-weight: 500;
 }
 
@@ -168,7 +168,7 @@ section .title::after{
     position: absolute;
     bottom: -12px;
     font-size: 20px;
-    color: crimson;
+    color: #A020F0;
     left: 50%;
     padding: 5px;
     transform: translateX(-50%);
@@ -197,25 +197,25 @@ section .title::after{
     margin-bottom: 10px;
 }
 .about .about-content .right span{
-    color: crimson;
+    color: #A020F0;
 }
 .about .about-content .right p{
     text-align: justify;
 }
 .about .about-content .right a{
     display: inline-block;
-    background: crimson;
+    background: #A020F0;
     color: #ddd;
     font-size: 20px;
     padding: 10px 30px;
     font-weight: 500;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid #A020F0;
     transition: all 0.5s ease;
 }
 .about .about-content .right a:hover{
-    color: crimson;
+    color: #A020F0;
     background: none;
 }
 
@@ -242,7 +242,7 @@ section .title::after{
     transition: all 0.5s ease;
 }
 .services .serv-content .card:hover{
-    background: crimson;
+    background: #A020F0;
 }
 .services .serv-content .card .box{
     transition: all 0.5s ease;
@@ -252,7 +252,7 @@ section .title::after{
 }
 .services .serv-content .card i{
     font-size: 50px;
-    color: crimson;
+    color: #A020F0;
     transition: color 0.5s ease;
 }
 .services .serv-content .card:hover i{
@@ -313,7 +313,7 @@ section .title::after{
     height: 100%;
     left: 0;
     top: 0;
-    background: crimson;
+    background: #A020F0;
 }
 .skills .skills-content .right .html::before{
     width: 80%;
@@ -347,7 +347,7 @@ section .title::after{
     transition: all 0.5s ease;
 }
 .projects .carousel .card:hover{
-    background: crimson;
+    background: #A020F0;
 }
 .projects .carousel .card .box{
     display: flex;
@@ -369,7 +369,7 @@ section .title::after{
     width: 290px;
     object-fit: cover;
     border-radius: 10px;
-    border: 2px solid crimson;
+    border: 2px solid #A020F0;
     transition: all 0.5s ease;
 }
 .projects .carousel .card:hover img{
@@ -381,7 +381,7 @@ section .title::after{
     margin: 0 5px;
     outline: none!important;
     border-radius: 50%;
-    border: 2px solid crimson!important;
+    border: 2px solid #A020F0!important;
     transition: all 0.5s ease;
 }
 .owl-dot.active{
@@ -390,7 +390,7 @@ section .title::after{
 }
 .owl-dot.active,
 .owl-dot:hover{
-    background: crimson!important;
+    background: #A020F0!important;
 }
 .owl-dots{
     text-align: center;
@@ -426,7 +426,7 @@ section .title::after{
 }
 .contact .contact-content .row i{
     font-size: 25px;
-    color: crimson;
+    color: #A020F0;
 }
 .contact .contact-content .info .head{
     font-weight: 500;
@@ -448,7 +448,7 @@ footer{
     color: #fff;
 }
 footer span a{
-    color: crimson;
+    color: #A020F0;
     text-decoration: none;
 }
 footer span a:hover{
