--- a/style.css
+++ b/style.css
@@ -174,6 +174,34 @@ section .title::after{
     transform: translateX(-50%);
 }
 
+.my-languages{
+    font-size: 20px;
+    font-weight: 500;
+    font-family: 'Ubuntu', sans-serif;
+    margin-top: 5px;
+}
+
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+    margin-top: 10px;
+  }
+  
+  td, th {
+    text-align: left;
+    padding: 6px;
+  }
+  
+  tr:nth-child(even) {
+    background-color: #ededed;
+  }
+
+  table, th, td {
+    border: 1px solid rgba(160, 32, 240, 0.5);
+    border-collapse: collapse;
+  }
+
 /* about section style */
 .about .title::after{
     content: "who I am";
@@ -563,5 +591,9 @@ footer span a:hover{
     .contact .contact-content .right .img img{
         width: 300px;
         height: 140px;
+    }
+    td, th{
+        padding: 3px;
+        font-size: 12;
     }
 }
