--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html{
 }
 .max-width{
     max-width: 1300px;
-    padding: 0 80px;
+    padding: 0 60px;
     margin: auto;
 }
 /* navbar style */ 
@@ -61,6 +61,73 @@ html{
 .navbar.sticky .menu li a:hover{
     color: #fff;
 }
+.select-box {
+    display: flex;
+    width: 80px;
+    flex-direction: column;
+}
+.select-box .options-container {
+    background: #2f3640;
+    color: #fff;
+    max-height: 0;
+    width: 100%;
+    opacity: 0;
+    transition: all 0.4s;
+    border-radius: 8px;
+    overflow: hidden;  
+    order: 1;
+}  
+.selected {
+    border-radius: 8px;
+    margin-bottom: 8px;
+    color: #f5f6fa;
+    position: relative;
+    order: 0;
+}
+.selected::after {
+    content: "";
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    height: 100%;
+    width: 32px;
+    right: 10px;
+    top: 5px;
+    transition: all 0.4s;
+}
+.select-box .options-container.active {
+    max-height: 240px;
+    opacity: 1;
+    overflow-y: scroll;
+}
+.select-box .options-container.active + .selected::after {
+    transform: rotateX(180deg);
+    top: -6px;
+}  
+.select-box .options-container::-webkit-scrollbar {
+    width: 8px;
+    background: #0d141f;
+    border-radius: 0 8px 8px 0;
+}  
+.select-box .options-container::-webkit-scrollbar-thumb {
+    background: #525861;
+    border-radius: 0 8px 8px 0;
+}  
+.select-box .option,
+.selected {
+    padding: 10px;
+    cursor: pointer;
+}  
+.select-box .option:hover {
+    background: #414b57;
+}  
+.select-box label {
+    cursor: pointer;
+}  
+.select-box .option .radio {
+    display: none;
+}
+
 /* menu button style */
 .menu-btn{
     color: #fff;
