--- a/style.css
+++ b/style.css
@@ -590,7 +590,7 @@ footer span a:hover{
         top: 0;
         text-align: center;
         background: #111;
-        padding-top: 80px;
+        padding-top: 20px;
         transition: all 0.5s ease;
     }
     .navbar .menu.active{
@@ -603,6 +603,8 @@ footer span a:hover{
         display: inline-block;
         margin: 20px 0;
         font-size: 25px;
+    }.select-box .options-container.active {
+        max-height: 120px;
     }
     .home .home-content .text-2{
         font-size: 55px;
